# assembler

./: .gitignore  CMakeLists.txt
include/: assembler.h  datatypes.h  tokenizer.h  utils.h
res/: inc+dec.asm  intermediate.ime  mult.asm  mult.asm2  output.out  symbolTable.sym  tokens.tkz
src/: main.cpp
